--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "slidefullpage",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "",
-  "main": "dist/slideFullPage.js",
+  "main": "dist/slideFullPage.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
